--- a/asset/css/genericrules.css
+++ b/asset/css/genericrules.css
@@ -6,157 +6,164 @@
 
 /* #region width col */
 
-col_1 {
+.col_1 {
     width: calc((100% / 12) * 1);
 }
 
-col_2 {
+.col_2 {
     width: calc((100% / 12) * 2);
 }
 
-col_3 {
+.col_3 {
     width: calc((100% / 12) * 3);
 }
 
-col_4 {
+.col_4 {
     width: calc((100% / 12) * 4);
 }
 
-col_5 {
+.col_5 {
     width: calc((100% / 12) * 5);
 }
 
-col_6 {
+.col_6 {
     width: calc((100% / 12) * 6);
 }
 
-col_7 {
+.col_7 {
     width: calc((100% / 12) * 7);
 }
 
-col_8 {
+.col_8 {
     width: calc((100% / 12) * 8);
 }
 
-col_9 {
+.col_9 {
     width: calc((100% / 12) * 9);
 }
 
-col_10 {
+.col_10 {
     width: calc((100% / 12) * 10);
 }
 
-col_11 {
+.col_11 {
     width: calc((100% / 12) * 11);
 }
 
-col_12 {
+.col_12{
     width: calc((100% / 12) * 12);
 }
 
 /* #endregion width col */
 /* #region width col md */
+@media screen and (min-width:768px) {
 
-col_md_1 {
-    width: calc((100% / 12) * 1);
-}
 
-col_md_2 {
-    width: calc((100% / 12) * 2);
-}
+    .col_md_1 {
+        width: calc((100% / 12) * 1);
+    }
 
-col_md_3 {
-    width: calc((100% / 12) * 3);
-}
+    .col_md_2 {
+        width: calc((100% / 12) * 2);
+    }
 
-col_md_4 {
-    width: calc((100% / 12) * 4);
-}
+    .col_md_3 {
+        width: calc((100% / 12) * 3);
+    }
 
-col_md_5 {
-    width: calc((100% / 12) * 5);
-}
+    .col_md_4 {
+        width: calc((100% / 12) * 4);
+    }
 
-col_md_6 {
-    width: calc((100% / 12) * 6);
-}
+    .col_md_5 {
+        width: calc((100% / 12) * 5);
+    }
 
-col_md_7 {
-    width: calc((100% / 12) * 7);
-}
+    .col_md_6 {
+        width: calc((100% / 12) * 6);
+    }
 
-col_md_8 {
-    width: calc((100% / 12) * 8);
-}
+    .col_md_7 {
+        width: calc((100% / 12) * 7);
+    }
 
-col_md_9 {
-    width: calc((100% / 12) * 9);
-}
+    .col_md_8 {
+        width: calc((100% / 12) * 8);
+    }
 
-col_md_10 {
-    width: calc((100% / 12) * 10);
-}
+    .col_md_9 {
+        width: calc((100% / 12) * 9);
+    }
 
-col_md_11 {
-    width: calc((100% / 12) * 11);
-}
+    .col_md_10 {
+        width: calc((100% / 12) * 10);
+    }
 
-col_md_12 {
-    width: calc((100% / 12) * 12);
+    .col_md_11 {
+        width: calc((100% / 12) * 11);
+    }
+
+    .col_md_12 {
+        width: calc((100% / 12) * 12);
+    }
 }
 
 /* #endregion width col md */
 /* #region width col lg */
+@media screen and (min-width: 1552px) {
 
-col_lg_1 {
-    width: calc((100% / 12) * 1);
+
+    .col_lg_1 {
+        width: calc((100% / 12) * 1);
+    }
+
+    .col_lg_2 {
+        width: calc((100% / 12) * 2);
+    }
+
+    .col_lg_3 {
+        width: calc((100% / 12) * 3);
+    }
+
+    .col_lg_4 {
+        width: calc((100% / 12) * 4);
+    }
+
+    .col_lg_5 {
+        width: calc((100% / 12) * 5);
+    }
+
+    .col_lg_6 {
+        width: calc((100% / 12) * 6);
+    }
+
+    .col_lg_7 {
+        width: calc((100% / 12) * 7);
+    }
+
+    .col_lg_8 {
+        width: calc((100% / 12) * 8);
+    }
+
+    .col_lg_9 {
+        width: calc((100% / 12) * 9);
+    }
+
+    .col_lg_10 {
+        width: calc((100% / 12) * 10);
+    }
+
+    .col_lg_11 {
+        width: calc((100% / 12) * 11);
+    }
+
+    .col_lg_12 {
+        width: calc((100% / 12) * 12);
+    }
 }
 
-col_lg_2 {
-    width: calc((100% / 12) * 2);
-}
-
-col_lg_3 {
-    width: calc((100% / 12) * 3);
-}
-
-col_lg_4 {
-    width: calc((100% / 12) * 4);
-}
-
-col_lg_5 {
-    width: calc((100% / 12) * 5);
-}
-
-col_lg_6 {
-    width: calc((100% / 12) * 6);
-}
-
-col_lg_7 {
-    width: calc((100% / 12) * 7);
-}
-
-col_lg_8 {
-    width: calc((100% / 12) * 8);
-}
-
-col_lg_9 {
-    width: calc((100% / 12) * 9);
-}
-
-col_lg_10 {
-    width: calc((100% / 12) * 10);
-}
-
-col_lg_11 {
-    width: calc((100% / 12) * 11);
-}
-
-col_lg_12 {
-    width: calc((100% / 12) * 12);
-}
 /* #endregion width col lg */
 /* utilitys */
-.d_flex{
+.d_flex {
     display: flex;
 }
