--- a/asset/css/genericrules.css
+++ b/asset/css/genericrules.css
@@ -27,7 +27,7 @@
 }
 
 .col_6 {
-    width: calc((100% / 12) * 6);
+    width: 50%;
 }
 
 .col_7 {
@@ -51,7 +51,7 @@
 }
 
 .col_12{
-    width: calc((100% / 12) * 12);
+    width: 100%;
 }
 
 /* #endregion width col */
@@ -80,7 +80,7 @@
     }
 
     .col_md_6 {
-        width: calc((100% / 12) * 6);
+        width: 50%;
     }
 
     .col_md_7 {
@@ -104,7 +104,7 @@
     }
 
     .col_md_12 {
-        width: calc((100% / 12) * 12);
+        width: 100%;
     }
 }
 
@@ -134,7 +134,7 @@
     }
 
     .col_lg_6 {
-        width: calc((100% / 12) * 6);
+        width: 50%;
     }
 
     .col_lg_7 {
@@ -158,7 +158,7 @@
     }
 
     .col_lg_12 {
-        width: calc((100% / 12) * 12);
+        width: 100%;
     }
 }
 
