--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -74,7 +74,7 @@ nav .ico_menu svg{
     background-color: var(--white);
     padding: 1rem 0;
 }
-.intro .row, .planning .row, .partners .row{
+.intro .row, .planning .row, .partners .row, .benefits .row ,.about .row{
     width: 80%;
     margin: auto;
     flex-wrap: wrap;
