--- a/asset/css/genericrules.css
+++ b/asset/css/genericrules.css
@@ -56,7 +56,7 @@
 
 /* #endregion width col */
 /* #region width col md */
-@media screen and (min-width:768px) {
+@media screen and (min-width:768px) and (max-width:1552px){
 
 
     .col_md_1 {
