--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -252,6 +252,7 @@ nav .ico_menu svg {
     max-width: 100%;
     aspect-ratio: 1/1;
     border-radius: 50%;
+    padding: 10%;
 }
 
 .partners .container_violet .text_area {
