--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -247,7 +247,7 @@ nav .ico_menu svg {
 
 .partners .container_violet .img {
     width: 80%;
-    border-radius: 3px;
+    border-radius: 50%;
     padding: 10%;
 }
 
