--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -220,8 +220,9 @@ nav .ico_menu svg {
     background-color: var(--lightviolet);
     text-align: center;
     margin: auto;
-    padding: 0.5rem;
-    width: 11%;
+    padding: 0.3rem 0;
+    width: 2rem;
+    aspect-ratio: 1/1;
 }
 
 /* #endregion planning */
@@ -585,7 +586,8 @@ footer .container p {
     }
 
     .planning .container_whait .disc {
-        width: 20%;
+        width: 3rem;
+        padding: 0.7rem 0;
     }
 
     .partners .container_violet .text_area {
