--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -248,16 +248,16 @@ nav .ico_menu svg {
 }
 
 .partners .container_violet .img {
-    width: 200px;
-    overflow: auto;
-    aspect-ratio: 1/1;
+    width: 260px;
+    height: 260px;
+    overflow: hidden;
     border-radius: 50%;
 }
 
 .partners .container_violet .img img {
-    width: 200px;
+    width: 260px;
+    height: 260px;
     object-fit: cover;
-    aspect-ratio: 1/1;
 }
 
 
