--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    /* colors */
+    /* #region colors */
 
     --header: rgba(0, 132, 253, 1);
 
@@ -12,13 +12,13 @@
     --yellow: rgba(253, 193, 95, 1);
 
     --footer: rgba(51, 51, 51, 1);
-
+    /* #endregion colors */
 }
 
 * {
     font-family: 'PT Sans', sans-serif;
 }
-
+/* #region utilitys */
 .intro .row,
 .planning .row,
 .partners .row,
@@ -40,7 +40,7 @@ button {
     padding: 0.7rem;
     border: 0;
 }
-
+/* #endregion utilitys */
 /* #region debug */
 .debug [class ^="col"] {
     background: green;
@@ -49,7 +49,6 @@ button {
 }
 
 /* #endregion debug */
-
 /* #region header */
 header {
     background-color: var(--header);
